# smart-meter-reader

./: .gitignore  LICENSE  Readme.md  config.py  pyproject.toml  settings.toml
dev/t210/: DEV.ipynb  sample_messages.py  sample_output.txt
etc/: smart_meter_reader@.service
smart_meter_reader/: __main__.py
smart_meter_reader/clients/: __init__.py
smart_meter_reader/clients/dummy/: __init__.py
smart_meter_reader/clients/kamstrup_403/: __init__.py  const.py  kamstrup.py
smart_meter_reader/clients/sagemcom_T210_D_r/: __init__.py  bytestream_buffer.py
smart_meter_reader/sinks/: __init__.py
smart_meter_reader/sinks/homie/devices/: __init__.py  dummy_smart_meter.py  electric_smart_meter.py  heat_smart_meter.py  smart_meter.py
